<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:scrollbars="none"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="170dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:src="@drawable/logo_tex"
             />

        <LinearLayout
            android:id="@+id/ll_sign_up_phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="100dp"
            android:orientation="horizontal"
            android:background="@color/colorPrimary"
            >

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:clickable="false"
                android:longClickable="false"
                android:padding="10dp"
                android:src="@drawable/white_call" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/white"
                android:clickable="false"
                android:longClickable="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:clickable="false"
                android:longClickable="false"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:text="@string/sign_up_using_phone"
                />
        </LinearLayout>

        <Button
            android:id="@+id/btn_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/skip"
            android:background="@color/transparent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/gray"
            android:layout_marginTop="40dp"
            android:text="@string/by_using_this_app_you_agree_to"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            >
            <Button
                android:id="@+id/btn_terms"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorPrimary"
                android:textSize="13sp"
                android:textStyle="italic"
                android:background="@color/transparent"
                android:textAllCaps="false"
                android:text="@string/terms_and_conditions"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorPrimary"/>

        </LinearLayout>


    </LinearLayout>
</ScrollView>