<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:background="@drawable/bg"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:src="@drawable/contact"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edt_bg"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:orientation="horizontal"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"


            >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:gravity="center"
                android:padding="10dp"
                android:src="@drawable/user_icon"
                />
            <EditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_gravity="center_vertical"
                android:background="@color/white"
                android:hint="@string/full_name"
                android:textColorHint="@color/gray"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textColor="@color/black"
                android:singleLine="true"
                android:gravity="center_vertical"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edt_bg"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"


            >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:gravity="center"
                android:padding="10dp"
                android:src="@drawable/mail"
                />
            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_gravity="center_vertical"
                android:background="@color/white"
                android:hint="@string/email_address"
                android:textColorHint="@color/gray"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:singleLine="true"
                android:gravity="center_vertical"
                />
        </LinearLayout>


        <EditText
            android:id="@+id/edt_message"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_gravity="center_vertical"
            android:background="@color/white"
            android:hint="@string/message"
            android:textColorHint="@color/gray"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textColor="@color/black"
            android:singleLine="true"
            android:gravity="top"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:padding="10dp"

            />

        <Button
            android:id="@+id/btn_send"
            android:layout_width="200dp"
            android:layout_height="37dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:background="@drawable/btn_login_bg"
            android:text="@string/send"
            />
    </LinearLayout>

</ScrollView>