<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray0"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:scrollbars="none"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        >
        <ImageView
            android:layout_width="200dp"
            android:layout_height="130dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="4dp"
                android:src="@drawable/user_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/full_name"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                />
        </LinearLayout>

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edt_bg"
            android:hint="@string/full_name"
            android:inputType="text"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="4dp"
                android:src="@drawable/blue_phone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/phone"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                />
        </LinearLayout>

        <EditText
            android:id="@+id/edt_phone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edt_bg"
            android:hint="@string/phone"
            android:inputType="phone"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:src="@drawable/calendar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/date"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edt_bg"
            android:hint="@string/date"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="16sp"
            android:gravity="center_vertical"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="4dp"
                android:src="@drawable/users" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/number_of_workers"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                />
        </LinearLayout>

        <EditText
            android:id="@+id/edt_workers"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edt_bg"
            android:hint="@string/number_of_workers"
            android:inputType="number"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="4dp"
                android:src="@drawable/map" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/address_in_details"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                />
        </LinearLayout>

        <EditText
            android:id="@+id/edt_address"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:background="@drawable/edt_bg"
            android:hint="@string/address_in_details"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="16sp"
            android:gravity="top"
            android:padding="8dp"
            />
        <Button
            android:id="@+id/btn_reserve"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:text="@string/reserve"
            />
    </LinearLayout>


</ScrollView>