<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:scrollbars="none"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:id="@+id/ll_terms"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:weightSum="2"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1.7"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:gravity="center_vertical|start"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:clickable="false"
                android:longClickable="false"
                android:text="@string/terms_and_conditions"
                />
            <ImageView
                android:id="@+id/arrow1"
                android:layout_width="0dp"
                android:layout_weight=".3"
                android:layout_height="match_parent"
                android:src="@drawable/black_right_arrow"
                android:padding="17dp"
                android:clickable="false"
                android:longClickable="false"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray2"/>
        <LinearLayout
            android:id="@+id/ll_contact"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:weightSum="2"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1.7"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:gravity="center_vertical|start"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:clickable="false"
                android:longClickable="false"
                android:text="@string/contact_us"
                />
            <ImageView
                android:id="@+id/arrow3"
                android:layout_width="0dp"
                android:layout_weight=".3"
                android:layout_height="match_parent"
                android:src="@drawable/black_right_arrow"
                android:padding="17dp"
                android:clickable="false"
                android:longClickable="false"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray2"/>
        <LinearLayout
            android:id="@+id/ll_about"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:weightSum="2"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1.7"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:gravity="center_vertical|start"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:clickable="false"
                android:longClickable="false"
                android:text="@string/about_us"
                />
            <ImageView
                android:id="@+id/arrow4"
                android:layout_width="0dp"
                android:layout_weight=".3"
                android:layout_height="match_parent"
                android:src="@drawable/black_right_arrow"
                android:padding="17dp"
                android:clickable="false"
                android:longClickable="false"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray2"/>
        <LinearLayout
            android:id="@+id/ll_developer"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:weightSum="2"
            >
            <TextView
                android:id="@+id/tv_developer"
                android:layout_width="0dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1.7"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:gravity="center_vertical|start"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:clickable="false"
                android:longClickable="false"
                />
            <ImageView
                android:layout_width="0dp"
                android:layout_weight=".3"
                android:layout_height="match_parent"
                android:src="@drawable/calling"
                android:padding="17dp"
                android:clickable="false"
                android:longClickable="false"
                />
        </LinearLayout>

    </LinearLayout>
</ScrollView>